crates/engage/tests/integrations/snapshots/integrations__four_tasks_with_deps_graph@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit successfully after deterministically printing a graphviz dot representation of the Engage file.
---
Some(
    0,
)
