crates/engage/tests/integrations/snapshots/integrations__four_tasks_with_deps_graph@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit successfully after deterministically printing a graphviz dot representation of the Engage file.
---
digraph {
    0 [ label = "a" ]
    1 [ label = "b" ]
    2 [ label = "c" ]
    3 [ label = "d" ]
    0 -> 1 [ label = "via 'after'" ]
    2 -> 3 [ label = "via 'before'" ]
}
