crates/engage/tests/integrations/snapshots/integrations__global_unknown_fields@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about unknown fields.
---
Errors:

#1
Error: failed to load the Engage file

#2 (which caused #1)
Error: failed to deserialize the Engage file

#3 (which caused #2, causing #1)
Error: TOML parse error at line 1, column 1
  |
1 | foo = "bar"
  | ^^^
unknown field `foo`, expected `processes`
