crates/engage/tests/integrations/snapshots/integrations__invalid_name_continue@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about a non-first character in a process name not being allowed
---

