crates/engage/tests/integrations/snapshots/integrations__invalid_name_empty@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about empty process names not being allowed
---
Errors:

#1
Error: failed to load the Engage file

#2 (which caused #1)
Error: failed to deserialize the Engage file

#3 (which caused #2, causing #1)
Error: TOML parse error at line 1, column 12
  |
1 | [processes.""]
  |            ^^
empty string is not a valid name
