crates/engage/tests/integrations/snapshots/integrations__invalid_name_empty@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about empty task names not being allowed
---

